--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,11 +35,17 @@
 </head>
 <body>
 
-<div class="container mt-4 shadow-lg p-3 mb-5 bg-body rounded">
+<div id="container" class="container mt-4 shadow-lg p-3 mb-5 bg-body rounded">
     <button id="btnCrear" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalUsuario">
-        Crear
+        Crear Usuario
     </button>
-    <table id="tablaUsuarios" class="table mt-2 table-bordered table-striped">
+    <button id="btnBuscar" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalUsuarioBuscar">
+        Buscar por correo
+    </button>
+    <button id="btnEliminar" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalUsuarioEliminar">
+        Eliminar usuario por correo
+    </button>
+    <table id="tablaUsuarios" class="table mt-2 table-bordered table-striped" style="text-align: center">
         <thead>
         <tr class="text-center">
             <th>ID</th>
@@ -49,7 +55,7 @@
             <th>Acciones</th>
         </tr>
         </thead>
-        <tbody>
+        <tbody id="tbody">
         </tbody>
     </table>
 </div>
@@ -61,21 +67,21 @@
                 <h5 class="modal-title" id="exampleModalLabel">Usuario</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form>
+            <form style="padding: 1rem">
                 <div class="mb-3">
                     <label for="nombre" class="col-form-label">Nombre:</label>
-                    <input id="nombre" type="text" class="form-control" autofocus>
+                    <input id="nombre" type="text" class="form-control" autofocus required>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="col-form-label">Email</label>
-                    <input id="email" type="text" class="form-control">
+                    <input id="email" type="email" class="form-control" required>
                 </div>
                 <div class="mb-3">
                     <label for="prioridad" class="col-form-label">Prioridad</label>
-                    <input id="prioridad" type="text" class="form-control">
+                    <input id="prioridad" type="number" class="form-control" required>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                     <button type="submit" class="btn btn-primary">Guardar</button>
                 </div>
             </form>
@@ -83,6 +89,43 @@
     </div>
 </div>
 
+<div id="modalUsuarioBuscar" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabelSearch" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header bg-primary text-white">
+                <h5 class="modal-title" id="exampleModalLabelSearch">Usuario a buscar</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+                <div class="mb-3" style="padding: 1rem">
+                    <label for="email" class="col-form-label">Email</label>
+                    <input id="emailBuscar" type="email" class="form-control" required>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button onclick="buscar()" class="btn btn-primary">Buscar</button>
+                </div>
+        </div>
+    </div>
+</div>
+
+<div id="modalUsuarioEliminar" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabelSearch" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header bg-primary text-white">
+                <h5 class="modal-title" id="exampleModalLabelEliminar">Usuario a eliminar</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="mb-3" style="padding: 1rem">
+                <label for="email" class="col-form-label">Email</label>
+                <input id="emailEliminar" type="email" class="form-control" required>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button onclick="eliminar()" class="btn btn-primary">Eliminar</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
